// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title> renders correctly 1`] = `
.c0 {
  display: inline;
  font-weight: bold;
  font-size: 32px;
  line-height: 44px;
  color: inherit;
}

<div
  class="c0"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.
</div>
`;

exports[`<Title> renders with different levels render Title with size=1 1`] = `
.c0 {
  display: inline;
  font-weight: bold;
  font-size: 32px;
  line-height: 44px;
  color: inherit;
}

<div
  class="c0"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.
</div>
`;

exports[`<Title> renders with different levels render Title with size=2 1`] = `
.c0 {
  display: inline;
  font-weight: bold;
  font-size: 24px;
  line-height: 32px;
  color: inherit;
}

<div
  class="c0"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.
</div>
`;

exports[`<Title> renders with different levels render Title with size=3 1`] = `
.c0 {
  display: inline;
  font-weight: bold;
  font-size: 16px;
  line-height: 25px;
  color: inherit;
}

<div
  class="c0"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.
</div>
`;
